--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,6 @@
 <html>
-<h1>This is my fisrt page powered by GitHub pages</h1>
+<h1>This is my first project in github for aws</h1>
 
-Thanks GitHub !!!
+HELLO WORLD !!!
 
 </html>
